fix grandama, change thumbnail

--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/snaash">GrandAMA iOS App</a>
+          <a id="title" href="https://ajzhen.com/grandama">GrandAMA iOS App</a>
           <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
-          <p id="year">SUMMER 2018</p>
+          <p id="year">SUMMER 2018 (Updated 2020)</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/snaash">
-              <img src="assets/snaash/thumbnail.jpg" alt="GrandAMA project thumbnail" title="GrandAMA">
+            <a href="https://ajzhen.com/grandama">
+              <img src="assets/grandama/thumbnail.jpg" alt="GrandAMA project thumbnail" title="GrandAMA">
             </a>
           </div>
         </div>
       </div>
     </section>
 
-    <section>
+    <!-- <section>
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
@@ -146,21 +146,21 @@
           <p id="year">WINTER 2018</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section>
-      <div class="grid-container-left">
-        <div id="work-des">
+      <div class="grid-container-right">
+        <div class="grid-item">
+          <div class="grid-content">
+            <a href="https://ajzhen.com/more">
+              <img src="assets/more/thumbnail.png" alt="More projects thumbnail" title="More Projects">
+            </a>
+          </div>
+        </div>
+        <div>
           <a id="title" href="https://ajzhen.com/more">More Dev + Design Projects</a>
           <p id="summary">A collection of web apps and web pages I've built along with illustrations I've made.</p>
           <p id="year">ONGOING</p>
-        </div>
-        <div id="work-img" class="grid-item grid-item-right">
-          <div class="grid-content">
-            <a href="https://ajzhen.com/more">
-              <img src="assets/more/camera-gear.jpg" alt="More projects thumbnail" title="More Projects">
-            </a>
-          </div>
         </div>
       </div>
     </section>
