--- a/grandama.html
+++ b/grandama.html
@@ -173,14 +173,12 @@
           <img src="assets/grandama/prototype-critique.jpg" class="first">
         </div >
 
-        <div class="prototype-container spacer-3" style="background-color: #FDAC37; padding: 3vw 0;">
-          <div class="center">
-            <!-- <img src="assets/grandama/answerer.png"> -->
+        <div class="prototype-container spacer-3">
+          <div class="center" style="background-color: #FDAC37; padding: 3vw 0;">
             <img src="assets/grandama/answerer.gif">
             <p id="img-caption">Answerer UI (Ages 50+)</p>
           </div>
-          <div class="center">
-            <!-- <img src="assets/grandama/asker.png"> -->
+          <div class="center" style="background-color: #FDAC37; padding: 3vw 0;">
             <img src="assets/grandama/asker.gif">
             <p id="img-caption">Asker UI (All ages)</p>
           </div>
@@ -227,7 +225,7 @@
           is in demand.
         </p>
 
-        <img src="assets/grandama/grandama-light.png" class="logo spacer-1">
+        <img id="grandama" src="assets/grandama/grandama-light.png" class="logo spacer-1">
         <p class="spacer-4">
           GrandAMA allows users to ask questions to a qualified group of elders 
           without having their profie revealed. GrandAMA borrows a feature from 
