update resume, blurb

--- a/about.html
+++ b/about.html
@@ -64,21 +64,20 @@
       <section>
         <div class="aboutSpacing">
           <p class="aboutTxt">I'm a 4th year UC San Diego undergraduate 
-            studying Design & Interaction. I'm a web designer + 
+            studying Cognitive Science, Design & Interaction. I'm a web 
             developer at <a href="https://asgraphicstudio.ucsd.edu/" id="asgs">
-            A.S. Graphic Studio</a> and a web developer for 
-            <a href="http://www.ucsddesign.co" id="dco">Design Co</a>, where I 
-            collaborate with UX and visual designers to implement graphics 
-            and high-fidelity prototypes.
+            A.S. Graphic Studio</a> and  <a href="http://www.ucsddesign.co" id="dco">
+            Design Co</a> where I get to collaborate with designers to implement 
+            ideas into high-fidelity states.
           </p>
         </div>
       </section>
         
       <section>
         <div class="aboutSpacing">
-          <p class="aboutTxt">I've had the opportunities to work under 
+          <p class="aboutTxt">Previously, I've had the opportunities to work under 
             <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UC San Diego’s ITS 
-            department</a> as a web developer in migrating websites and 
+            department</a> as a UX developer in migrating websites and 
             improving content architecture and usability and also as a UX developer 
             at <a href="http://www.caida.org/home/" id="caida">The Center for 
             Applied Internet Data Analysis</a>.
