add banners, fix footer

--- a/more.html
+++ b/more.html
@@ -50,18 +50,18 @@
       </div>
     </div>
 
-    <div id="extras-banner" class="banner spacer-4"></div>
+    <div id="more-banner" class="banner spacer-4"></div>
     <div class="banner-info">
       <div id="valign-div">
         <p id="work-title">More Dev + Design Projects</p>
-        <p id="extras-blurb" class="spacer-5">A collection of web apps and web pages I've built along with illustrations I've made.</p>
+        <p id="more-blurb" class="spacer-5">A collection of web apps and web pages I've built along with illustrations I've made.</p>
         <p id="work-blurb" class="hidden spacer-6">A collection of web apps and web pages I've built along with illustrations I've made.</p>
       </div>
     </div>
   </div>
 
   <main id="content-margins">
-    <h2 id="extras-header" class="spacer-2">Day Trip Icons</h2>
+    <h2 id="more-header" class="spacer-2">Day Trip Icons</h2>
     <p id="work-blurb" class="hidden spacer-1">Iconography</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <h2 id="extras-header" class="spacer-2">Dropbox Parallax</h2>
+    <h2 id="more-header" class="spacer-2">Dropbox Parallax</h2>
     <p id="work-blurb" class="hidden spacer-1">Parallax Scrolling</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
@@ -109,7 +109,7 @@
       </div>
     </div>
 
-    <h2 id="extras-header" class="spacer-2">Smile</h2>
+    <h2 id="more-header" class="spacer-2">Smile</h2>
     <p id="work-blurb" class="hidden spacer-1">Line Animation</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
@@ -134,7 +134,7 @@
       </div>
     </div>
 
-    <h2 id="extras-header" class="spacer-2">Rocket Countdown</h2>
+    <h2 id="more-header" class="spacer-2">Rocket Countdown</h2>
     <p id="work-blurb" class="hidden spacer-1">Color Theory</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
@@ -160,7 +160,7 @@
       </div>
     </div>
 
-    <h2 id="extras-header" class="spacer-2">My Money</h2>
+    <h2 id="more-header" class="spacer-2">My Money</h2>
     <p id="work-blurb" class="hidden spacer-1">Python: Finance Tracking</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
@@ -191,7 +191,7 @@
       </div>
     </div>
 
-    <h2 id="extras-header" class="spacer-2">Quickly Web App</h2>
+    <h2 id="more-header" class="spacer-2">Quickly Web App</h2>
     <p id="work-blurb" class="hidden spacer-1">Python: Data Cleaning + Parsing</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
@@ -223,13 +223,12 @@
         </div>
       </div>
     </div>
-  </main>
 
-  <footer id="footer">
-    <p id="note">Created by Andrew Zhen</p>
-    <p id="copyright">© 2020 San Diego</p>
-    <div style="clear: both"></div>
-  </footer>
+    <footer id="footer">
+      <p id="note">Created by Andrew Zhen</p>
+      <p id="copyright">© 2020 San Diego</p>
+    </footer>
+  </main>
 
   <script src="script/script.js" type="text/javascript"></script>
 </body>
