add project descriptions, fix banner height

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/more">More Dev + Design Projects</a>
-          <p id="summary">A collection of web apps and web pages I've built along with illustrations I've made.</p>
+          <a id="title" href="https://ajzhen.com/more">More Design + Dev Projects</a>
+          <p id="summary">A collection of other web apps and web pages I've built along with illustrations I've made.</p>
           <p id="year">ONGOING</p>
         </div>
       </div>
