--- a/more.html
+++ b/more.html
@@ -53,8 +53,8 @@
     <div id="more-banner" class="banner spacer-4"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <p id="work-title">More Dev + Design Projects</p>
-        <p id="more-blurb" class="spacer-5">A collection of web apps and web pages I've built along with illustrations I've made.</p>
+        <p id="work-title">More Design + Dev Projects</p>
+        <p id="more-blurb" class="spacer-5">A collection of more web apps and web pages I've built along with illustrations I've made.</p>
         <p id="work-blurb" class="hidden spacer-6">A collection of web apps and web pages I've built along with illustrations I've made.</p>
       </div>
     </div>
@@ -82,6 +82,12 @@
             Branding
           </p>
         </div>
+        <div class="info-header">
+          <h3>Description</h3>
+          <p>
+            Icons of everyday objects presented in a flat lay presentation.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -104,6 +110,12 @@
             CSS <br/>
             Parallax Scrolling <br/>
             Color Theory
+          </p>
+        </div>
+        <div class="info-header">
+          <h3>Description</h3>
+          <p>
+            A simple example of parallax scrolling on a web page.
           </p>
         </div>
       </div>
@@ -131,6 +143,12 @@
             Line Animation
           </p>
         </div>
+        <div class="info-header">
+          <h3>Description</h3>
+          <p>
+            A simple example of line animation on a web page.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -155,6 +173,13 @@
             Adobe Illustrator <br/>
             User Interface <br/>
             Color Theory
+          </p>
+        </div>
+        <div class="info-header">
+          <h3>Description</h3>
+          <p>
+            A color-changing background that adjusts according to the remaining 
+            time on the set countdown date.
           </p>
         </div>
       </div>
@@ -188,6 +213,13 @@
             Finance Tracking
           </p>
         </div>
+        <div class="info-header">
+          <h3>Description</h3>
+          <p>
+            I wrote a Python program to keep track of my expenses and earnings. 
+            A summary presents data for different categories, seasons, and months.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -219,6 +251,15 @@
             Delimited Text Files (.csv) <br/>
             Calendar Files (.ics) <br/>
             Data Cleaning
+          </p>
+        </div>
+        <div class="info-header">
+          <h3>Description</h3>
+          <p>
+            I was the lead full-stack developer for a class scheduling tool 
+            for UCSD students. I adhered to the client's design guidelines,  
+            cleaned large datasets, and delivered the final product in a 
+            timely manner.
           </p>
         </div>
       </div>
