--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA">
+            <a>
+              <img src="assets/asgs/thumbnail.png" alt="A.S. Graphic Studio thumbnail" title="A.S. Graphic Studio">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
-          <p id="year">SUMMER 2018</p>
+          <a id="title">A.S. Graphic Studio</a>
+          <p id="summary">Web design and development for UC San Diego's student government.</p>
+          <p id="year">WINTER 2019</p>
         </div>
       </div>
     </section>
@@ -83,14 +83,14 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/photography">Photography Portfolio</a>
-          <p id="summary">Design and development of a static web page featuring my digital photography work, hosted on heroku.</p>
-          <p id="year">FALL 2017</p>
+          <a id="title" href="https://ajzhen.com/caida">CAIDA Developer Internship</a>
+          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <p id="year">SUMMER 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/photography">
-              <img src="assets/photography/thumbnail.png" alt="Photography portfolio thumbnail" title="Photography Portfolio">
+            <a href="https://ajzhen.com/caida">
+              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA">
             </a>
           </div>
         </div>
@@ -101,15 +101,15 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/designco">
-              <img src="assets/designco/thumbnail.jpg" alt="Design Co thumbnail" title="Design Co">
+            <a href="https://ajzhen.com/photography">
+              <img src="assets/photography/thumbnail.png" alt="Photography portfolio thumbnail" title="Photography Portfolio">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/designco">Design Co</a>
-          <p id="summary">Development of the online presence of UC San Diego’s largest pre-professional design organization and related event web pages.</p>
-          <p id="year">SPRING 2019</p>
+          <a id="title" href="https://ajzhen.com/photography">Photography Portfolio</a>
+          <p id="summary">Design and development of a static web page featuring my digital photography work, hosted on heroku.</p>
+          <p id="year">FALL 2017</p>
         </div>
       </div>
     </section>
@@ -117,16 +117,33 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/grandama">GrandAMA iOS App</a>
-          <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
-          <p id="year">SUMMER 2018 (Updated 2020)</p>
+          <a id="title" href="https://ajzhen.com/designco">Design Co</a>
+          <p id="summary">Development of the online presence of UC San Diego’s largest pre-professional design organization and related event web pages.</p>
+          <p id="year">SPRING 2019</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
+          <div class="grid-content">
+            <a href="https://ajzhen.com/designco">
+              <img src="assets/designco/thumbnail.jpg" alt="Design Co thumbnail" title="Design Co">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="grid-container-right">
+        <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/grandama">
               <img src="assets/grandama/thumbnail.jpg" alt="GrandAMA project thumbnail" title="GrandAMA">
             </a>
           </div>
+        </div>
+        <div>
+          <a id="title" href="https://ajzhen.com/grandama">GrandAMA iOS App</a>
+          <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
+          <p id="year">SUMMER 2018 (Updated 2020)</p>
         </div>
       </div>
     </section>
@@ -149,18 +166,18 @@
     </section> -->
 
     <section>
-      <div class="grid-container-right">
-        <div class="grid-item">
+      <div class="grid-container-left">
+        <div id="work-des">
+          <a id="title" href="https://ajzhen.com/more">More Design + Dev Projects</a>
+          <p id="summary">A collection of other web apps and web pages I've built along with illustrations I've made.</p>
+          <p id="year">ONGOING</p>
+        </div>
+        <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/more">
               <img src="assets/more/thumbnail.png" alt="More projects thumbnail" title="More Projects">
             </a>
           </div>
-        </div>
-        <div>
-          <a id="title" href="https://ajzhen.com/more">More Design + Dev Projects</a>
-          <p id="summary">A collection of other web apps and web pages I've built along with illustrations I've made.</p>
-          <p id="year">ONGOING</p>
         </div>
       </div>
     </section>
