--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       
         <div id="tab" class="spacer3">
-          <h2 class="active mobile-tab">Development</h2>
+          <h2 class="mobile-tab">Development</h2>
           <h2 class="mobile-tab">Design</h2>
           <h2 class="active desktop-tab">Work</h2>
           <h2>About</h2>
