fix tab bugs, update style

--- a/caida.html
+++ b/caida.html
@@ -133,7 +133,7 @@
             opportunities to receive feedback on my work that varied 
             from mere conceptual ideas to high-fidelity quality.
           </p>
-          <p>
+          <p class="spacer3">
             Thank you to Ricky for the mentorship and guidance and to 
             Jennifer for the collaboration.
           </p>
