--- a/grandama.html
+++ b/grandama.html
@@ -186,7 +186,7 @@
             personal matters.
           </p>
 
-          <img id="reddit" class="spacer1 logo" src="assets/images/grandama/reddit-dark.png" alt="Reddit logo">
+          <img class="spacer1 logo" src="assets/images/grandama/reddit.png" alt="Reddit logo">
           <p class="spacer1">
             Though usernames are semi-anonymous, post/comment 
             history is available to anyone. On grandama, we want to 
@@ -209,7 +209,7 @@
             remaining anonymous is in demand.
           </p>
 
-          <img id="grandama" class="spacer1 logo" src="assets/images/grandama/grandama-dark.png" alt="GrandAMA logo">
+          <img class="spacer1 logo" src="assets/images/grandama/grandama.png" alt="GrandAMA logo">
           <p class="spacer1">
             GrandAMA allows users to ask questions to a qualified 
             group of elders without having their profie revealed. 
@@ -224,7 +224,7 @@
           <img class="spacer3" src="assets/images/grandama/competitive-analysis.jpg" alt="Competitive analysis">
 
           <h4>Conclusion and takeaways</h4>
-          <p>
+          <p class="spacer3">
             Our mobile application helps the two demographic groups, 
             elders and youth, with their respective needs. By 
             bringing together the wisdom of elders with the eagerness 
