--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
           </section>
 
-          <section id="work-pages">
+          <section id="work-pages" class="spacer3">
             <!-- Dev -->
             <div>
               <!-- CAIDA Internship ---------------------------------------------->
