--- a/photography.html
+++ b/photography.html
@@ -55,7 +55,7 @@
             visitors a more pleasant user exeperience.
           </p>
 
-          <img src="assets/images/photography/website.png" alt="Full website screenshot">
+          <img class="spacer3" src="assets/images/photography/website.png" alt="Full website screenshot">
         </div>
       </div>
     </div>
