--- a/triton-fest.html
+++ b/triton-fest.html
@@ -69,7 +69,7 @@
             so check back every week to see what you can do. 
           </p> -->
 
-          <img src="assets/images/tritonfest/website.png" alt="Full website screenshot">
+          <img class="spacer3" src="assets/images/tritonfest/website.png" alt="Full website screenshot">
         </div>
       </div>
     </div>
