--- a/ucsd-census.html
+++ b/ucsd-census.html
@@ -63,7 +63,7 @@
             manner.
           </p>
 
-          <img src="assets/images/census/website.png" alt="Full website screenshot">
+          <img class="spacer3" src="assets/images/census/website.png" alt="Full website screenshot">
         </div>
       </div>
     </div>
