--- a/design-co.html
+++ b/design-co.html
@@ -69,7 +69,7 @@
             </ul>
           </p>
 
-          <img src="assets/images/designco/website.png" alt="Full website screenshot">
+          <img class="spacer3" src="assets/images/designco/website.png" alt="Full website screenshot">
         </div>
       </div>
     </div>
