--- a/sun-god-festival.html
+++ b/sun-god-festival.html
@@ -37,10 +37,11 @@
       </div>
 
       <div class="content">
-        <video playsinline muted loop autoplay class="sticky-image" style="height: 100%">
+        <div id="sgf-img" class="sticky-image"></div>
+        <!-- <video playsinline muted loop autoplay class="sticky-image" style="height: 100%">
           <source src="assets/images/sgf/banner.mov">
           Your browser does not support HTML5 video.
-        </video>
+        </video> -->
 
         <div class="narrative">
           <h4>Description</h4>
