--- a/index.html
+++ b/index.html
@@ -117,12 +117,13 @@
               <p class="spacer2">Hey, I'm Andrew</p>
               <p class="spacer2">75% dev, 24% design, 1% noodles</p>
               <p class="spacer2">
-                I’m a 4th year Cognitive Science–Design major at UCSD and an aspiring UX 
-                engineer with a passion and skillset in design prototyping, 
-                front-end development, and collaboration!
+                I’m a 4th year Cognitive Science–Design major at UCSD and an 
+                aspiring UX engineer with a passion and skillset in design 
+                prototyping, front-end development, and collaboration!
               </p>
               <p class="spacer2">
-                Currently, I design and develop websites at UCSD’s graphic design agency, 
+                Currently, I design and develop websites at UCSD’s graphic 
+                design agency, 
                 @<a href="http://asgraphicstudio.ucsd.edu/" target="_blank">A.S. Graphic Studio</a>, 
                 and lead workshops and code away with React.js 
                 @<a href="http://www.ucsddesign.co/" target="_blank">Design Co</a>, 
@@ -130,11 +131,13 @@
               </p>
               <p class="spacer2">
                 Previously, I worked as a UX developer @UCSD’s IT Services 
-                and @The Center for Applied Internet Data Analysis (Supercomputer Center).
+                and @The Center for Applied Internet Data Analysis 
+                (Supercomputer Center).
               </p>
               <p>
-                Away from my computer, I’m a big fan of basketball, puzzles, 
-                interior design, and photosynthesizing in the sun. Come talk to 
+                Away from my computer, I’m a big fan of basketball, 
+                architecture, and photosynthesizing in the sun. I'm also on a 
+                quest to find the best spicy chicken sandwhich. Come talk to 
                 me about your favorite topic; I'd love to hear from you!
               </p>
             </div>
