--- a/index.html
+++ b/index.html
@@ -89,12 +89,10 @@
       
           <div id="intro" class="spacer4">
             <p id="message">
-              Hey, I’m a <span id="me">web developer</span> based in San Diego and I design and 
-              develop for digital experiences. I currently develop student 
-              body-related websites 
-              @<a href="http://asgraphicstudio.ucsd.edu/" target="_blank">A.S. Graphic Studio</a> 
-              and help lead UCSD’s largest design community 
-              @<a href="http://www.ucsddesign.co/" target="_blank">Design Co</a>.
+              Hey, I’m a <span id="me">web developer</span> based in San Diego 
+              and I design and develop for digital experiences. I currently 
+              develop student body-related websites at A.S. Graphic Studio and 
+              help lead UCSD’s largest design community at Design Co.
             </p>
           </div>
         
@@ -114,8 +112,8 @@
             <div id="portrait"></div>
 
             <div>
-              <p class="spacer2">Hey, I'm Andrew</p>
-              <p class="spacer2">75% dev, 24% design, 1% noodles</p>
+              <p class="spacer2">Hey, I'm Andrew.</p>
+              <p class="spacer2">75% dev, 24% design, and 1% noodles.</p>
               <p class="spacer2">
                 I’m a 4th year Cognitive Science–Design major at UCSD and an 
                 aspiring UX engineer with a passion and skillset in design 
@@ -130,8 +128,9 @@
                 UCSD’s pre-professional design organization.
               </p>
               <p class="spacer2">
-                Previously, I worked as a UX developer @UCSD’s IT Services 
-                and @The Center for Applied Internet Data Analysis 
+                Previously, I worked as a UX developer 
+                @<a href="https://blink.ucsd.edu/sponsor/ITS/index.html" target="_blank">UCSD’s IT Services</a> 
+                and @<a href="https://crowdtrace.caida.org/" target="_blank">The Center for Applied Internet Data Analysis</a>
                 (Supercomputer Center).
               </p>
               <p>
