update projects, colors

--- a/asce.html
+++ b/asce.html
@@ -4,7 +4,7 @@
   <meta http-equiv="refresh" content="0; URL='https://ajzhen.com/'" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Triton Fest Spring 2020</title>
+  <title>A.S. Concerts & Events</title>
 </head>
 <body>
   <div id="container" class="work-container">
@@ -16,12 +16,12 @@
         </div>
       </div>
       
-      <h3>Triton Fest Spring 2020</h3>
+      <h3>A.S. Concerts & Events</h3>
 
       <div class="details">
         <div>
           <h5>Date</h5>
-          <p>April 2020</p>
+          <p>April 2020 – June 2020</p>
         </div>
         <div>
           <h5>Role</h5>
@@ -33,13 +33,13 @@
         </div>
         <div>
           <h5>Relevant Links</h5>
-          <p><a href="http://tritonfest.ucsd.edu/goodcleanfun/" target="_blank">Website</a></p>
-          <p><a href="https://www.instagram.com/ucsdtritonfest/?hl=en" target="_blank">Instagram</a></p>
+          <p><a href="http://asce.ucsd.edu/" target="_blank">Website</a></p>
+          <p><a href="https://www.facebook.com/ucsdasce/" target="_blank">Facebook</a></p>
         </div>
       </div>
 
       <div class="content">
-        <div id="tritonfest-img" class="sticky-image"></div>
+        <div id="asce-img" class="sticky-image"></div>
 
         <div class="narrative">
           <h4>Description</h4>
@@ -59,18 +59,7 @@
             the hyperlinks update each week. 
           </p>
 
-          <!-- <p>
-            Never fear! Spring Triton Fest is here - online! Have a good 
-            time at home with these upcoming events:  Good, Clean Fun  
-            Our curated list of content to enjoy from home titled Good, 
-            Clean Fun. The list is updated every Friday and includes 
-            everything from fun videos to watch and our new Spotify playlist 
-            to wellness tips and professional development opportunities. 
-            Take a look at list in the link below. It updates every week 
-            so check back every week to see what you can do. 
-          </p> -->
-
-          <img src="assets/images/tritonfest/website.jpg" alt="Full website screenshot">
+          <img src="assets/images/asce/website.jpg" alt="Full website screenshot">
         </div>
       </div>
     </div>
