--- a/photography.html
+++ b/photography.html
@@ -56,7 +56,7 @@
             visitors a more pleasant user exeperience.
           </p>
 
-          <img class="spacer3" src="assets/images/photography/website.png" alt="Full website screenshot">
+          <img src="assets/images/photography/website.jpg" alt="Full website screenshot">
         </div>
       </div>
     </div>
