--- a/levelup.html
+++ b/levelup.html
@@ -4,7 +4,7 @@
   <meta http-equiv="refresh" content="0; URL='https://ajzhen.com/'" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Design Co – Join Our Team</title>
+  <title>Design Co – Level Up</title>
 </head>
 <body>
   <div id="container" class="work-container">
@@ -16,17 +16,16 @@
         </div>
       </div>
       
-      <h3>Design Co – Join Our Team</h3>
+      <h3>Design Co – Level Up</h3>
       
       <div class="details">
         <div>
           <h5>Date</h5>
-          <p>June 2019 – Present</p>
+          <p>May 2020</p>
         </div>
         <div>
-          <h5>Roles</h5>
+          <h5>Role</h5>
           <p>Web Developer</p>
-          <p>Unofficial photographer</p>
         </div>
         <div>
           <h5>Tools and Skills</h5>
@@ -34,13 +33,13 @@
         </div>    
         <div>
           <h5>Relevant Links</h5>
-          <p><a href="http://www.ucsddesign.co/" target="_blank">Website</a></p>
-          <p><a href="https://github.com/ucsddesignco/designco" target="_blank">GitHub Repository</a></p>
+          <p><a href="http://www.levelup.ucsddesign.co/" target="_blank">Website</a></p>
+          <p><a href="https://github.com/ucsddesignco/levelup" target="_blank">GitHub Repository</a></p>
         </div>
       </div>
 
       <div class="content">
-        <div id="dco-img" class="sticky-image"></div>
+        <div id="levelup-img" class="sticky-image"></div>
 
         <div class="narrative">
           <h4>Description</h4>
@@ -70,7 +69,7 @@
             </ul>
           </p>
 
-          <img class="spacer3" src="assets/images/designco/website.png" alt="Full website screenshot">
+          <img src="assets/images/levelup/website.jpg" alt="Full website screenshot">
         </div>
       </div>
     </div>
