--- a/sun-god-festival.html
+++ b/sun-god-festival.html
@@ -39,10 +39,6 @@
 
       <div class="content">
         <div id="sgf-img" class="sticky-image"></div>
-        <!-- <video playsinline muted loop autoplay class="sticky-image" style="height: 100%">
-          <source src="assets/images/sgf/banner.mov">
-          Your browser does not support HTML5 video.
-        </video> -->
 
         <div class="narrative">
           <h4>Description</h4>
@@ -71,6 +67,8 @@
             management of AS Concerts & Events, I developed the 
             Sun God Festival 2020 website.
           </p>
+
+          <img src="assets/images/sgf/website.jpg" alt="Full website screenshot">
         </div>
       </div>
     </div>
