--- a/grandama.html
+++ b/grandama.html
@@ -224,7 +224,7 @@
           </p>
           <img class="spacer3" src="assets/images/grandama/competitive-analysis.jpg" alt="Competitive analysis">
 
-          <h4>Conclusion and takeaways</h4>
+          <h4>Conclusion and Takeaways</h4>
           <p class="spacer3">
             Our mobile application helps the two demographic groups, 
             elders and youth, with their respective needs. By 
